--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ input,textarea{
     float: right;
 }
 
-@media (width: 700px){
+@media (max-width: 700px){
     .container{
         grid-template-columns: auto;
         margin:0 10%;
